// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. paragraph 1`] = `
<View>
  This being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
</View>
`;

exports[`2. empty paragraph 1`] = `null`;

exports[`3. paragraph with a drop cap 1`] = `
<View>
  his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
</View>
`;

exports[`4. paragraph with a short text and a drop cap 1`] = `
<View>
  his being Black History
</View>
`;
